--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
 
   #countTitle{
     text-align: center;
-    margin-right: 20px;
+    margin-left: 20px;
   }
 
   #container{
@@ -31,7 +31,7 @@
     display: flex;
     justify-content: center;
     margin-top: 40px;
-    margin-right: 20px;
+    margin-left: 30px;
   }
   
   .active {
